--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <!-- ===== FULL SCREEN LOGO SECTION ===== -->
   <div id="logo-screen" aria-hidden="false">
     <!-- TODO: replace the src below with your actual raw image link if different -->
-    <img src="https://raw.githubusercontent.com/rjpapad/rjpapad/main/logo.png" alt="RJ Papad Logo">
+    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"alt="RJ Papad Logo">
     <h2>RJ Papad Surat</h2>
 
     <!-- Language selection buttons -->
