--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <!-- BANNERS SECTION (यहाँ अपना banner URL डालें) -->
     <div style="text-align:center; padding:14px;">
-      <img id="banner-img" src="https://raw.githubusercontent.com/rjpapad/rjpapad/main/banner.png" alt="banner">
+      <img id="banner-img" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"alt="banner">
     </div>
 
     <!-- DESCRIPTION -->
