--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
     <div style="text-align:center; padding:14px;">
       <img id="banner-img" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"alt="banner">
     </div>
-
+<!-- SECOND BANNER SECTION -->
+<div style="text-align:center; padding:14px;">
+  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="second banner">
+</div>
     <!-- DESCRIPTION -->
     <div style="text-align:center; padding:6px 12px;">
       <p id="desc1"><strong>उद्दद मरी पापड़</strong></p>
