--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
       var message = `नमस्ते RJ Papad, मेरा ऑर्डर:\nName: ${name}\nAddress: ${address}\nPincode: ${pincode}\nMobile: ${mobile}`;
       // TODO: अपना फोन नंबर यहाँ डालें (country code के साथ)
-      var phoneNumber = "91XXXXXXXXXX";
+      var phoneNumber = "916353745646";
       var whatsappURL = `https://wa.me/${phoneNumber.replace(/\D/g,'')}?text=${encodeURIComponent(message)}`;
 
       window.open(whatsappURL, "_blank");
