--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
     <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"alt="RJ Papad Logo">
     <h2>RJ Papad Surat</h2>
 
-    <!-- भाषा चुनने के बटन -->
-    <div style="margin-top:28px;">
-      <button class="lang-btn" data-lang="hi" type="button">हिन्दी</button>
-      <button class="lang-btn" data-lang="en" type="button">English</button>
-      <button class="lang-btn" data-lang="gu" type="button">ગુજરાતી</button>
+    <!-- ===== LANGUAGE BUTTONS (FINAL WORKING CODE) ===== -->
+<div style="margin-top:28px;">
+  <button class="lang-btn" data-lang="hi">🇮🇳 हिंदी</button>
+  <button class="lang-btn" data-lang="en">🇬🇧 English</button>
+  <button class="lang-btn" data-lang="gu">🇮🇳 ગુજરાતી</button>
+</div>
     </div>
     <small style="margin-top:12px; display:block; color:#444;">कृपया भाषा चुनें</small>
   </div>
