--- a/index.html
+++ b/index.html
@@ -99,13 +99,16 @@
       <h1 id="header-text">स्वाद में खास RJ पापड़</h1>
     </header>
 
-    <!-- BANNERS SECTION (यहाँ अपना banner URL डालें) -->
-    <div style="text-align:center; padding:14px;">
-      <img id="banner-img" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"alt="banner">
-    </div>
-<!-- SECOND BANNER SECTION -->
-<div style="text-align:center; padding:14px;">
-  <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png" alt="second banner">
+    <!-- ===== BANNERS SECTION (REPLACE WITH THIS) ===== -->
+<!-- Primary banner (use id="banner-img") -->
+<div id="banner-1-wrap" style="text-align:center; padding:14px 0;">
+  <img id="banner-img" src="https://raw.githubusercontent.com/rjpap/placeholder/main/banner-hi.jpg" alt="Banner 1" style="max-width:100%; height:auto;" />
+</div>
+
+<!-- Secondary banner (use id="banner2-img") -->
+<div id="banner-2-wrap" style="text-align:center; padding:12px 0;">
+  <img id="banner2-img" src="https://raw.githubusercontent.com/rjpap/placeholder/main/banner2-hi.jpg" alt="Banner 2" style="max-width:100%; height:auto;" />
+</div>
 </div>
     <!-- DESCRIPTION -->
     <div style="text-align:center; padding:6px 12px;">
