--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- ===== BANNERS SECTION (REPLACE WITH THIS) ===== -->
 <!-- Primary banner (use id="banner-img") -->
 <div id="banner-1-wrap" style="text-align:center; padding:14px 0;">
-  <img id="banner-img" src="https://raw.githubusercontent.com/rjpap/placeholder/main/banner-hi.jpg" alt="Banner 1" style="max-width:100%; height:auto;" />
+  <img id="banner-img" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"alt="Banner 1" style="max-width:100%; height:auto;" />
 </div>
 
 <!-- Secondary banner (use id="banner2-img") -->
