--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 <!-- Secondary banner (use id="banner2-img") -->
 <div id="banner-2-wrap" style="text-align:center; padding:12px 0;">
-  <img id="banner2-img" src="https://raw.githubusercontent.com/rjpap/placeholder/main/banner2-hi.jpg" alt="Banner 2" style="max-width:100%; height:auto;" />
+  <img id="banner2-img" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"alt="Banner 2" style="max-width:100%; height:auto;" />
 </div>
 </div>
     <!-- DESCRIPTION -->
